--- a/script/carla.ipynb
+++ b/script/carla.ipynb
@@ -57,14 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5ab5365e-37aa-4357-8d22-c75921d3965f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "weather = carla.WeatherParameters(cloudiness=10.0,\n",
-    "                                  precipitation=10.0,\n",
-    "                                  fog_density=10.0,)\n",
+    "weather = carla.WeatherParameters.ClearNoon\n",
     "world.set_weather(weather)"
    ]
   },
